# claude-code-templates

./: .env.example  .gitignore  CLAUDE.md  README.md  generate_trending_data.py  package-lock.json  package.json  vercel.json
.claude/: settings.json  settings.local.json
.claude/agents/: deployer.md
.claude/commands/: create-blog-article.md
.github/workflows/: build-rust-cli.yml  component-security-validation.yml  daily-blog-discord.yml  daily-community-help-discord.yml  daily-component-discord.yml  daily-general-discord.yml  deploy.yml  discord-release-notification.yml  publish-package.yml  rust-ci.yml  skill-security-scan-all.yml  skill-security-scan.yml  update-json-data.yml
api/: package-lock.json  package.json
cli-rust/: .gitignore  Cargo.toml  README.md
cli-rust/npm/: build-packages.mjs
cli-rust/npm/cct/: package.json
cli-rust/src/: cli.rs  constants.rs  github.rs  main.rs  merge.rs  python_compat.rs  tracking.rs
cli-rust/src/commands/: delegate.rs  install.rs  mod.rs
cli-rust/src/util/: fs_ext.rs  mod.rs  paths.rs
cli-rust/tests/: integration.rs
cli-tool/: SKILLS_DASHBOARD.md  package-lock.json  package.json  security-report.json
dashboard/: .env.example  .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
docs/: claude-jobs.json  component.html  components.json  index.html  trending-data.json
docu/: 404.html  index.html  markdown-page.html  sitemap.xml
scripts/: deploy.sh  generate_blog_images.py  generate_blog_images_v2.py  generate_components_json.py  generate_plugins_json.py  skillspector_scan.py
(+2044 files in other folders)
